fix(player): aspect ratio breaks on safari
closes #936

--- a/packages/react/.templates/sandbox/styles.css
+++ b/packages/react/.templates/sandbox/styles.css
@@ -32,8 +32,6 @@ media-player {
   --video-border-radius: 2px;
 
   /* 👉 https://vidstack.io/docs/player/components/layouts/default#css-variables for more. */
-
-  width: 100%;
 }
 
 media-player[data-view-type='video'] {
