--- a/packages/vidstack/.templates/sandbox/styles.css
+++ b/packages/vidstack/.templates/sandbox/styles.css
@@ -19,8 +19,6 @@ media-player {
   --video-border-radius: 2px;
 
   /* 👉 https://vidstack.io/docs/player/components/layouts/default#css-variables for more. */
-
-  width: 100%;
 }
 
 media-player[data-view-type='video'] {
