--- a/packages/vidstack/player/styles/default/poster.css
+++ b/packages/vidstack/player/styles/default/poster.css
@@ -13,8 +13,9 @@
   opacity: 0;
   width: 100%;
   height: 100%;
+  z-index: 1;
+  border: 0;
   pointer-events: none;
-  object-fit: cover;
   box-sizing: border-box;
   transition: opacity 0.2s ease-out;
 }
@@ -29,9 +30,10 @@
 }
 
 .vds-poster :where(img) {
+  border: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 :where(.vds-poster[data-hidden]) {
